@@ -8,7 +8,7 @@
 # See the file "license.terms" for information on usage and redistribution
 # of this file, and for a DISCLAIMER OF ALL WARRANTIES.
 #
-# RCS: @(#) $Id: parse.test,v 1.8 2001/09/13 11:56:20 msofer Exp $
+# RCS: @(#) $Id: parse.test,v 1.9 2003/02/11 18:03:28 msofer Exp $
 
 if {[lsearch [namespace children] ::tcltest] == -1} {
     package require tcltest
@@ -727,6 +727,10 @@ test parse-15.57 {CommandComplete procedure} {
 test parse-15.58 {CommandComplete procedure, memory leaks} {
     info complete "1 2 3 4 5 6 7 8 9 10 11 12 13 14 15 16 17 18 19 20 21 22"
 } 1
+test parse-15.58 {CommandComplete procedure} {
+    # Test for Tcl Bug 684744
+    info complete [encoding convertfrom identity "\x00;if 1 \{"]
+} 0
 
 test parse-16.1 {Tcl_EvalEx, check termOffset is set correctly for non TCL_OK cases, bug 2535} {
     subst {[eval {return foo}]bar}
