@@ -1,3 +1,8 @@
+2003-02-11  Miguel Sofer <msofer@users.sf.net>
+
+	* generic/tclParse.c
+	* tests/parse.test: fix for [Bug 684744], by Don Porter.
+
 2003-02-11  Jeff Hobbs  <jeffh@ActiveState.com>
 
 	* generic/tclIOUtil.c (Tcl_FSJoinPath, Tcl_FSGetNormalizedPath): 
